versioned_docs/version-8.1/guides/update-guide/connectors/0100-to-0110.md
---
id: 0100-to-0110
title: Update 0.10 to 0.11
description: "Review which adjustments must be made to migrate from Connector SDK 0.10.x to 0.11.0."
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

<span class="badge badge--beginner">Beginner</span>

:::note
Please migrate directly to the version 0.11.2 of the SDK. It contains a fix for several issues in the 0.11.0 release.
:::

This SDK release is not backwards-compatible.
We are moving towards a stable Connectors release and continue to improve the experience of developing custom connectors.

In this SDK version, we changed the OutboundConnectorContext and InboundConnectorContext interfaces significantly.
You can no longer use the `getVariablesAsType` or `getPropertiesAsType` methods in outbound and inbound connectors, respectively.
Use the new bindVariables method instead: it takes care of secret replacement, payload validation and deserialization automatically.

We are moving away from a mandatory @Secret annotation.
Starting from this release, secrets are automatically replaced in all input variables/properties without the need to explicitly declare an annotation.

To migrate your Connector implementations, please do the following:
1. If you used the `OutboundConnectorContext::getVariablesAsType` method in you outbound Connector functions, replace it with `OutboundConnectorContext::bindVariables`.
2. If you used the `InboundConnectorContext::getPropertiesAsType` method in you inbound Connector executables, replace it with `InboundConnectorContext::bindProperties`.
3. Remove calls to `OutboundConnectorContext::replaceSecrets` and `InboundConnectorContext::replaceSecrets` methods. The secrets are now replaced automatically.
4. Remove calls to `OutboundConnectorContext::validate` and `InboundConnectorContext::validate` methods. The validation is now performed automatically.
4. If you used the `@Secret` annotation in your Connector implementations, you can safely remove it, as it has no effect.
